notes and responsive updates

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Becket Bowes</title>
 </head>
 
+
 <body>
     <header>
+        <!-- title and nav bar -->
         <div id="layer">
         <nav>
             <ul>
