holy hell just trying to fix the fact that this whole thing was in a shell folder this whole time.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/stylesheet/style.css">
-    <title>Becket Bowes</title>
+    <title>Chronoclasts</title>
 </head>
 
 
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Becket Bowes</a>
+                    <a href="index.html">CHRONOCLASTS</a>
                 </li>
                 <li>
                     <a href="#things">/things</a>
@@ -39,6 +39,7 @@
         <div id="text">Becket Bowes is a creator working in New York, making content in both physical and intangible forms. He is currently learning to code at Columbia Bootcamp Spot by making this website and has some upcoming projects that will involve alternative methods of keeping time.</div>
     </section>
 
+    <!-- placeholders for the first project -->
     <article id="things">
         <h2>/things:</h2>
         <ul>
@@ -61,6 +62,7 @@
         </ul>
     </article>
 
+    <!-- placeholders for the second project -->
     <article id="code">
         <h2>/code:</h2>
         <ul>
@@ -75,6 +77,7 @@
         </ul>
     </article>
 
+    <!-- placeholders for the third project -->
     <article id="plans">
         <h2>/plans:</h2>
         <ul>
@@ -98,6 +101,7 @@
         </ul>
     </article>
 
+    <!-- currently non-functioning contact form -->
     <article id="contact">
         <h2>/contact:</h2>
         <form id="contactform" class="contactform">
@@ -115,6 +119,7 @@
         </form>
     </article>
 
+    <!-- like at the end of Ferris Bueller's day off, remember? -->
     <footer>
         <p>
         What are you still doing here? It's over. Go home. <img src="./assets/images/500px-Cc.logo.circle.svg.png"> Becket Bowes 2021. 
