first upload using the codeclast file name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/stylesheet/style.css">
-    <title>Chronoclasts</title>
+    <title>Codeclast</title>
 </head>
 
 
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">CHRONOCLASTS</a>
+                    <a href="index.html">CODECLAST</a>
                 </li>
                 <li>
                     <a href="#things">/things</a>
